--- a/_publications/US20230418735A1.md
+++ b/_publications/US20230418735A1.md
@@ -8,6 +8,6 @@ paperurl: 'https://patents.google.com/patent/US20230418735A1/en'
 citation: 'P Le, HAO Minshen, ECY Chow, Z Liu - US Patent App. 18/243,486, 2023'
 ---
 
-# Abstract
+*Abstract*
 
 A method of software launch regression testing comprises monitoring a user engagement parameter of an existing application running on a plurality of client devices and determining a probability interval from the user engagement parameter of the existing application. A candidate update application is then launched to a subset of the plurality of client devices. The method then proceeds with monitoring a corresponding user engagement parameter of the candidate update version running on the subset of client devices, determining if the corresponding user engagement parameter of the candidate update version falls within the probability interval, and, based on the probability interval falling within the probability interval, providing a testing pass notification.
