--- a/_publications/US20230418735A1.md
+++ b/_publications/US20230418735A1.md
@@ -1,9 +1,9 @@
 ---
-title: "Application Launch Support (Patent #20230418735A1)"
+title: "Application Launch Support"
 collection: publications
 permalink: /publication/US20230418735A1
 date: 2023-12-28
-venue: 'Snap Inc.'
+venue: 'US Patent Office (#20230418735A1)'
 paperurl: 'https://patents.google.com/patent/US20230418735A1/en'
 citation: 'P Le, HAO Minshen, ECY Chow, Z Liu - US Patent App. 18/243,486, 2023'
 ---
