--- a/_quant/crypto_microstructure_20240519/microstructure.ipynb
+++ b/_quant/crypto_microstructure_20240519/microstructure.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "id": "9e6c6f91-6ab9-49f0-ae47-d70e3659a3f3",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,9 @@
     "import os\n",
     "import glob\n",
     "pd.set_option(\"display.max_rows\", 5000)\n",
+    "pd.set_option(\"display.max_columns\", 5000)\n",
     "volume_path = \"/mnt/vol1\"\n",
+    "plt_kwargs = { \"grid\": True, \"figsize\": (12,5) }\n",
     "\n",
     "\"\"\"\n",
     "Main parameters to change.\n",
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "id": "5a407041-7000-42bf-b911-eb22bb31fba6",
    "metadata": {},
    "outputs": [
@@ -54,18 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/8 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 12\u001b[0m\n\u001b[1;32m      7\u001b[0m date_nodash \u001b[38;5;241m=\u001b[39m date\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m fp \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvolume_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/bars/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_nodash\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/incremental_book_l2/\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoinbase_incremental_book_l2_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdate_nodash\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_btcusd__timebars_1min.parquet\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     11\u001b[0m )\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mexists(fp):\n\u001b[1;32m     13\u001b[0m     df_raw \u001b[38;5;241m=\u001b[39m pl\u001b[38;5;241m.\u001b[39mread_parquet(fp)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+      "100%|██████████| 8/8 [00:00<00:00, 69.02it/s]\n"
      ]
     }
    ],
@@ -87,8 +78,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "id": "47ce27d9-f2d7-411c-b5ac-5eb7a14c3f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleUpgradeRequired",
+     "evalue": "hvplot>=0.9.1 is required for `.plot`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleUpgradeRequired\u001b[0m                     Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_1611276/2690333351.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_raw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpivot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'bar_start'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'side'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'vwap'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mplt_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/jupyterlab/evnchw.github.io/.venv/lib/python3.10/site-packages/polars/dataframe/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    583\u001b[0m         if not _HVPLOT_AVAILABLE or parse_version(hvplot.__version__) < parse_version(\n\u001b[1;32m    584\u001b[0m             \u001b[0;34m\"0.9.1\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m         ):\n\u001b[1;32m    586\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"hvplot>=0.9.1 is required for `.plot`\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 587\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mModuleUpgradeRequired\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    588\u001b[0m         \u001b[0mhvplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost_patch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    589\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mhvplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplotting\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhvPlotTabularPolars\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleUpgradeRequired\u001b[0m: hvplot>=0.9.1 is required for `.plot`"
+     ]
+    }
+   ],
+   "source": [
+    "df_raw.pivot(index='bar_start', columns='side', values='vwap').plot(**plt_kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "187bac78-9c9c-4b60-8038-2a9abb6729df",
+   "id": "2a7e5cdb-ea0d-421c-af14-b1965e7a0852",
    "metadata": {},
    "outputs": [],
    "source": []
