--- a/_quant/20240526_crypto_microstructure_roundup/code.ipynb
+++ b/_quant/20240526_crypto_microstructure_roundup/code.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "9e6c6f91-6ab9-49f0-ae47-d70e3659a3f3",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,37 @@
    "metadata": {},
    "source": [
     "## Read in data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "925a67d0-3593-46ff-b38c-5c0ce4339799",
+   "metadata": {},
+   "source": [
+    "### Trades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5b06585f-fb75-4a2d-b888-48ba99ae11ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nNote: data is generated and stored via another project.\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Note: data is generated and stored via another project.\n",
+    "\"\"\""
    ]
   },
   {
