--- a/_publications/chow_2016.md
+++ b/_publications/chow_2016.md
@@ -1,7 +1,7 @@
 ---
 title: "PRICE, ANCHORING, & SUBSTITUTION IN THE MARKET FOR FINE ART AUCTIONS"
 collection: publications
-permalink: /publication/chow_2016.md
+permalink: /publication/chow_2016
 date: 2016-07-11
 venue: 'Princeton University Senior Theses'
 paperurl: 'https://dataspace.princeton.edu/handle/88435/dsp013b591c02f'
