--- a/_publications/chow_2019.md
+++ b/_publications/chow_2019.md
@@ -1,7 +1,7 @@
 ---
 title: "Not all mobile devices are equal: measuring heterogeneous performance in online controlled experiments"
 collection: publications
-permalink: /publication/chow_2019.md
+permalink: /publication/chow_2019
 date: 2019-11-02
 venue: 'CODE@MIT: The 6th Annual Conference on Digital Experimentation @ MIT'
 paperurl: 'https://github.com/evnchw/evnchw.github.io/blob/master/files/chow_2019.pdf'
