--- a/_notes/20240804_qin_2021_attacking.md
+++ b/_notes/20240804_qin_2021_attacking.md
@@ -24,5 +24,8 @@ This paper is the first to explore the implication of transaction atomicity and 
     - in that sense, anyone can have instant access to massive capital
     - useful for instantly executing arbitrage
       - borrow, trade, repay back
+    - case studies of two attacks using flash loans.
+    - #1: Pump Attack and Arbitrage (PA&A, February 15 2020)
+      - Basic idea: borrow ETH, quickly 
   - **Overall impression**:
 
