--- a/_notes/20240804_qin_2021_attacking.md
+++ b/_notes/20240804_qin_2021_attacking.md
@@ -26,6 +26,7 @@ This paper is the first to explore the implication of transaction atomicity and 
       - borrow, trade, repay back
     - case studies of two attacks using flash loans.
     - #1: Pump Attack and Arbitrage (PA&A, February 15 2020)
-      - Basic idea: borrow ETH, quickly 
+      - Basic idea: borrow ETH, quickly
+    - TODO: continue this paper when I have more time
   - **Overall impression**:
 
