--- a/_notes/20240805_xu_2022_sok.md
+++ b/_notes/20240805_xu_2022_sok.md
@@ -38,6 +38,28 @@ Abstract—As an integral part of the decentralized finance (DeFi) ecosystem, DE
         - divergence (impermanent) loss: value of assets in the pool fluctuates over time, so you may contribute X to the pool and yet when you want to withdraw, you only get 0.7X (in real terms of a currency pair, say against USDT or BTC.)
       - the general model of an AMM
         - comment on invalidity of only adding one asset to the pool: for liquidity provision/withdrawal, you cannot only add 1 asset because (by construction) it will throw off the relative proportions of the reserves, and there is no freedom to compute prices. In that sense, adding 1 asset would have to be recomputed across all assets to maintain the relative proportions. For trades, the free parameter is the price, so if you submit X of a reserve, the price and corresponding output gets computed so that the reserves are maintained.
+        - tokens $k=1 \dots n$
+        - system states are market data (quantities, prices): $\mathcal{X} = (r_k, p_k)_k$
+          - so, system transitions $\mathcal{X} \to \mathcal{X}'$ under protocol $f$ and action $a$
+          - (usually fixed) parameters $\mathcal{C}, \Omega$ representing conservation parameters (e.g. "constant" for constant-product) and protocol parameters, respectively
+          - conservation law can be formulated as $Z((r_k)_k) - \mathcal{C} = 0$
+        - actions and their rules
+          - liquidity providers can add/withdraw liquidity but only in a fixed amount across all reserves
+          - traders can exchange reserves for another but this modifies the price, and the amount you get back depends on how much you are trading
+        - spot FX rate: $(\partial Z / \partial r_i) / (\partial Z / \partial r_j)$ which corresponds to 1/price for $j$
+        - slippage:
+          - there is always slippage because the price and output quantities are recomputed exactly after you submit your exchange amount, so you get a price like $(x + \delta x) / (y - \delta y)$ which differs between the output quantities.
+          - computation steps, say you are locking up $x$ in exchange for $y$.
+            - 1) update reserves by adding $x$
+            - 2) rebalance reserves wrt. the conservation law, letting $y$ be the only thing that varies ("given the new amount $x$, what is the new amount of $y$")
+            - 3) compute the needed change in $y$: $y \to y'$ and output the difference
+        - divergence loss / impermanent loss: your loss by having your asset locked up and not being able to exchange it freely
+          - computation steps (roughly)
+            - as a preliminary, calculate original value of reserves, using the reserve's spot FX rates
+            - outside the pool, let there be a small proportional increase $\rho>0$ in one asset $o$. compute (value in pool + increase outside pool) to obtain the value held. This represents the value of having that token (asset) outside the pool, noting that the increase is directly only on that token only.
+            - now compute the counterfactual: as if the proportional increase was implemented within the pool via arbitrage as to balance out the reserves and respect the conservation law. In short this is saying that the "ex-pool" gains are implemented within the mechanics of the pool itself.
+            - compare value held vs. that counterfactual.
+        - 
   - **Overall impression**: ...
     - extremely useful mathematical framework for formalizing a decentralized exchange with an AMM mechanism.
 
