--- a/_notes/20240805_xu_2022_sok.md
+++ b/_notes/20240805_xu_2022_sok.md
@@ -59,7 +59,21 @@ Abstract—As an integral part of the decentralized finance (DeFi) ecosystem, DE
             - outside the pool, let there be a small proportional increase $\rho>0$ in one asset $o$. compute (value in pool + increase outside pool) to obtain the value held. This represents the value of having that token (asset) outside the pool, noting that the increase is directly only on that token only.
             - now compute the counterfactual: as if the proportional increase was implemented within the pool via arbitrage as to balance out the reserves and respect the conservation law. In short this is saying that the "ex-pool" gains are implemented within the mechanics of the pool itself.
             - compare value held vs. that counterfactual.
-        - 
+      - kinds of attacks
+        - infrastructural
+        - block timestamp manipulation
+        - transaction sequence manipulation
+        - middleware-layer (exploit smart contracts)
+        - reentrancy attacks
+        - flash loan attacks.
+          - Example: manipulating price on one AMM that is an oracle to another platform.
+          - In short: (borrow A) --> (swap on an upstream AMM-oracle for B, making A cheaper there) --> (use that amount of B on a downstream lending platform to borrow A at the cheaper price) --> (pay back A with the cheaper price, keeping the premium).
+          - say there are two tokens, $x_A$ and $x_B$ that have the same value at market price
+          - swap $x_A \to x_B - \delta_1$ on an AMM $\mathcal{K}$.
+            - Because there is now more $x_A$ than $x_B$ on the AMM, this pushes up the price of $x_B$ and pushes down the price of $x_A$.
+            - Specifically, the price of $x_B$ goes from: $x_B/x_A$ \to $(x_B-\delta_2)/x_A$ for some $\delta_2 > \delta_1 > 0$.
+            - On another platform that uses $\mathcal{K}$ as a price oracle (recalling we have made $X_A$ cheaper), put up your swap amount $x_B - \delta_1$ as collateral to get $x_A + \delta_3$.
+            - Repay the flash loan $x_A$, keeping $\delta_3$.
   - **Overall impression**: ...
     - extremely useful mathematical framework for formalizing a decentralized exchange with an AMM mechanism.
 
