--- a/_notes/20240805_xu_2022_sok.md
+++ b/_notes/20240805_xu_2022_sok.md
@@ -59,7 +59,7 @@ Abstract—As an integral part of the decentralized finance (DeFi) ecosystem, DE
             - outside the pool, let there be a small proportional increase $\rho>0$ in one asset $o$. compute (value in pool + increase outside pool) to obtain the value held. This represents the value of having that token (asset) outside the pool, noting that the increase is directly only on that token only.
             - now compute the counterfactual: as if the proportional increase was implemented within the pool via arbitrage as to balance out the reserves and respect the conservation law. In short this is saying that the "ex-pool" gains are implemented within the mechanics of the pool itself.
             - compare value held vs. that counterfactual.
-      - kinds of attacks
+      - kinds of attacks (nice pseudocode of all these)
         - infrastructural
         - block timestamp manipulation
         - transaction sequence manipulation
@@ -74,8 +74,22 @@ Abstract—As an integral part of the decentralized finance (DeFi) ecosystem, DE
             - Specifically, the price of $x_B$ goes from: $x_B/x_A$ \to $(x_B-\delta_2)/x_A$ for some $\delta_2 > \delta_1 > 0$.
             - On another platform that uses $\mathcal{K}$ as a price oracle (recalling we have made $X_A$ cheaper), put up your swap amount $x_B - \delta_1$ as collateral to get $x_A + \delta_3$.
             - Repay the flash loan $x_A$, keeping $\delta_3$.
+        - rug pull attacks
+          - create new coin XYZ
+          - create liquidity pool XYZ:ETH, since you are the LP you will get LP tokens
+          - attract lots of people to lock up ETH for XYZ
+          - since you have lots of LP tokens, use them to take out a huge amount of ETH, leaving people with the (now almost worthless) XYZ
+        - frontrunning
+          - common approach: manipulate gas fees to get your stuff done first
+          - backrunning as well (gas fees after)
+          - sandwich attacks
+      - privacy concerns
+        - transaction inspection
+        - identity tracing (have to piece together with identifiable info like social media)
+        - behavioral model interference (examine historical patterns of accounts)
   - **Overall impression**: ...
-    - extremely useful mathematical framework for formalizing a decentralized exchange with an AMM mechanism.
+    - this is a really core paper (SOK) on decentralized exchanges with AMMs that formalizes a lot of mechanisms within a unified framework, for various mechanisms and protocols.
+    - also, discusses other aspects too concisely (security, privacy, etc.)
 
 
 
